--- a/src/components/taskTracker/tasktracker.css
+++ b/src/components/taskTracker/tasktracker.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin: 0.5rem;
   margin-bottom: 20px;
-  color: var(--color-white)
+  color: var(--color-primary)
 }
 
 .task_container {
@@ -16,9 +16,13 @@
   overflow: auto;
   min-height: 300px;
   border: 1px solid steelblue;
-  padding: 1px;
+  padding: 5px;
+  border: 1px solid;
   border-radius: 0.75rem;
-  background-color: #313133a4;
+  /* background-color: #313133a4; */
+  background-color: var(--color-white);
+  border-color: var(--color-priumary-variant);
+  color: #fff
 }
 
 .add_task_btn {
@@ -26,6 +30,7 @@
   background: var(--color-primary);
   color: #fff;
   border: 1px solid;
+  border-color:gray;
   padding: 0.25rem 0.5rem;
   margin: 5px;
   border-radius: 5px;
@@ -46,19 +51,24 @@
 .btn-block {
   display: block;
   width: 100%;
+  background: var(--color-primary);
+  color: var(--color-white);
+  border-radius: .25rem;
+  padding: 0.5rem;
 }
 
 .task {
-  background: #f4f4f431;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
-  color: #fff;
+  color: var(--color-primary);
   border-radius: 0.5rem;
+  border: 1px solid;
+  background-color: #F7F7F7;
 }
 
 .task.reminder {
-  border-left: 5px solid green;
+  border-left: 7px solid var(--color-primary);
 }
 
 .task h3 {
@@ -67,16 +77,19 @@
   justify-content: space-between;
 }
 
-.add-form {
+.add-task-form {
   margin-bottom: 40px;
 }
 
 .form-control {
-  margin: 20px 0;
+  margin: 10px 0;
+  background-color: #F7F7F7;
+  border-color: #D5D6D6!important;
 }
 
 .form-control label {
   display: block;
+  color: var(--color-primary);
 }
 
 .form-control input {
@@ -85,19 +98,22 @@
   margin: 5px;
   padding: 3px 7px;
   font-size: 17px;
+  border: 1px solid;
+  border-color: #D5D6D6;
 }
 
 .form-control-check {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 30px !important;
 }
 
 .form-control-check label {
   flex: 1;
+  color: var(--color-primary);
 }
 
 .form-control-check input {
-  flex: 2;
-  height: 20px;
+  flex: 3;
 }
