Complete Task Tracker Functionality
Clicking on the add button will either open the add task form or
close it. The button is dynamic and changes depending on whether
the form is showing or not.

--- a/src/components/taskTracker/tasktracker.css
+++ b/src/components/taskTracker/tasktracker.css
@@ -15,7 +15,7 @@
   margin: 1px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 1px solid steelblue !important;
   padding: 5px;
   border: 1px solid;
   border-radius: 0.75rem;
