--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-image: url(./assets/bg-texture.jpg);
+  /* background-image: url(./assets/bg-texture.jpg); */
   background-position: center;
   background-repeat: repeat;
   background-attachment: fixed;
