--- a/src/components/taskTracker/tasktracker.css
+++ b/src/components/taskTracker/tasktracker.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin: 0.5rem;
   margin-bottom: 20px;
-  color: var(--color-primary)
+  color: var(--color-bg-variant);
 }
 
 .task_container {
@@ -22,15 +22,14 @@
   /* background-color: #313133a4; */
   background-color: var(--color-white);
   border-color: var(--color-priumary-variant);
-  color: #fff
+  color: #fff;
 }
 
 .add_task_btn {
   display: inline-block;
-  background: var(--color-primary);
+  background: var(--color-bg-variant);
   color: #fff;
-  border: 1px solid;
-  border-color:gray;
+  border: none;
   padding: 0.25rem 0.5rem;
   margin: 5px;
   border-radius: 5px;
@@ -51,9 +50,9 @@
 .btn-block {
   display: block;
   width: 100%;
-  background: var(--color-primary);
+  background: var(--color-bg-variant);
   color: var(--color-white);
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   padding: 0.5rem;
 }
 
@@ -64,7 +63,7 @@
   color: var(--color-primary);
   border-radius: 0.5rem;
   border: 1px solid;
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
 }
 
 .task.reminder {
@@ -83,8 +82,8 @@
 
 .form-control {
   margin: 10px 0;
-  background-color: #F7F7F7;
-  border-color: #D5D6D6!important;
+  background-color: #f7f7f7;
+  border-color: #d5d6d6 !important;
 }
 
 .form-control label {
@@ -99,7 +98,7 @@
   padding: 3px 7px;
   font-size: 17px;
   border: 1px solid;
-  border-color: #D5D6D6;
+  border-color: #d5d6d6;
 }
 
 .form-control-check {
