--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -25,14 +25,14 @@
 .Auth-form-title {
   text-align: center;
   margin-bottom: 1em;
-  color: rgb(34, 34, 34);
+  color: var(--color-bg-variant);
   font-weight: 800;
 }
 
 label {
   font-size: 14px;
   font-weight: 600;
-  color: rgb(34, 34, 34);
+  color: var(--color-bg-variant);
 }
 
 .sign_in_btn {
